# android_packages_apps_Recorder

./: .gitignore  WORKSPACE  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/src/main/: Android.bp  Android.mk  AndroidManifest-gradle.xml  AndroidManifest.xml  AppManifest.xml  BUILD.bazel
app/src/main/java/safesax/: BadXmlException.java  Children.java  Element.java  ElementListener.java  EndElementListener.java  EndTextElementListener.java  Parsers.java  RootElement.java  StartElementListener.java  TextElementListener.java
app/src/main/res/anim/: rotation.xml
app/src/main/res/animator/: lift_on_touch.xml
app/src/main/res/drawable/: avd_pause_to_play.xml  avd_play_to_pause.xml  background_screen_recorder_overlay.xml  background_screen_recorder_overlay_main.xml  ic_action_record.xml  ic_action_screen_record.xml  ic_action_sound_record.xml  ic_action_stop.xml  ic_audio.xml  ic_check_circle.xml  ic_delete.xml  ic_drag.xml  ic_edit.xml  ic_empty_list.xml  ic_last_screen.xml  ic_last_sound.xml  ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_library_music.xml  ic_list_checked.xml  ic_list_empty.xml  ic_list_unchecked.xml  ic_menu.xml  ic_mic.xml  ic_notification_screen.xml  ic_notification_sound.xml  ic_pause.xml  ic_play.xml  ic_play_arrow.xml  ic_play_circle.xml  ic_play_circle_outline.xml  ic_radio_button_unchecked.xml  ic_resume.xml  ic_screen_video.xml  ic_settings.xml  ic_share.xml  ic_shortcut_bg.xml  ic_shortcut_list.xml  (+4 more)
app/src/main/res/layout/: dialog_base.xml  (+16 more)
(+206 files in other folders)
